# PlainLicense

./: .eslintcache  .eslintignore  .eslintrc  .gitignore  .gitmodules  .linthtmlrc.yaml  .markdownlint.yml  .package.json.kate-swp  .pre-commit-config.yaml  .pre-commit-config.yml  .releaserc.json  .sourcery.yaml  .stylelintignore  .stylelintrc  404.html  CNAME  CONTRIBUTING.md  LICENSE_TEMPLATE.md  README.md  UNLICENSE  _typos.toml  build.mjs  bun.lockb  commitlint.config.js  eslint.config.mjs  generate-changelog.js  index.html  license_template.md  materiallanding.html  mkdocs.yml  mlc_config.json  ms.js  package-lock.json  package.json  pyproject.toml  ruff.toml  setup.sh  sitemap.xml  splash.css  tsconfig.build.json  (+2 more)
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  dependabot.yml  labeler.yml  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  legal_issue.md  legal_issue.yml  new_license_submission.yml  plain_language_emergency.yml
.github/scripts/: generate-changelog.js  generate-changelog.mjs  update-submodule.sh  update-submodules.sh  update_sponsors.py
.github/src/: generate-changelog.ts  index.ts
.github/workflows/: ci.yml  deploy.yml  fundingupdate.yml  linkcheck.yml  minify.yml  pull-requests.yml  release-build-deploy.yml  release.yml  spelling.yml
assets/javascripts/: bundle.fe8b6f2b.min.js
assets/logo/: info.txt
blog/: index.html
content/: boilerplate.yml  license.yml
content/en/: elastic-2.0.yml  mit.yml  mpl-2.0.yml  unlicense.yml
custom_extensions/: custom_loader.py
docs/: CNAME  index.md  meta.json  shame.md  splash.css
docs/about/: index.md
docs/blog/: .authors.yml  index.md
docs/en/: index.md
docs/faq/: index.md
docs/helping/: code.md  commit.md  craft.md  donate.md  index.md  legal.md  translate.md  write.md
docs/includes/: abbreviations.md
docs/javascripts/: feedback.js
docs/licenses/: index.md
docs/our-mission/: faq.md  index.md
docs/overrides/: home.html
docs/stylesheets/: en_extras.css  extra.css
docs/who-we-are/: index.md
helping/: code.html  crafting.html  donate.html  index.html  legal.html  legalreview.html  translate.html
hooks/: _logconfig.py  add_license_boilerplate.py  add_script.py  addmarkdowntab.py  build_licenses.py  insert_year.py  licenseboilerplate.py  socialmedia.py  update_changelogs.py
includes/: abbreviations.html  abbreviations.md
licenses/: PlainAGPLv3.html  PlainApachev2.html  PlainBSDv2.html  PlainGPLv2.html  PlainGPLv3.html  PlainLGPLv2.html  PlainLGPLv3.html  PlainMIT.html  PlainMPLv2.html  PlainUnlicense.html  index.html
licenses/copyleft/: PlainAGPLv3.html  PlainGPLv2.html  PlainGPLv3.html  PlainMPLv2.html  index.html
licenses/permissive/: PlainApachev2.html  PlainBSDv2.html  PlainLGPLv2.html  PlainLGPLv3.html  PlainMIT.html  index.html
licenses/public-domain/: PlainUnlicense.html  index.html
our-mission/: faq.html  index.html
our-mission/how-to-help/: code.html  edit.html  index.html  legalreview.html  translate.html
overrides/: buildmeta.html  buildmeta.json  embedded_license.html  home.bak.html  home.bak2.html  home.html  license.html  license_main.md  main.html
overrides/hooks/: _logconfig.py  buildtest.py  content_assembly.py  env_settings.py  hook_logger.py  license_assembly.py  license_canary.py  md_filter.py  set_jinja_extensions.py  set_pil.py  socialmedia.py  update_changelogs.py  update_site_license.py
overrides/partials/: copyright.html  easter.html  header.html  hero_tabs.html  herobody.html  heroheader.html  herolanding.html  home-tabs.html  license_bottom.md  license_changelog_tab.md  license_content.html  (+13 more)
plugins/: content_assembly.py  markdown_filter.py
schemas/: boilerplate_schema.json  license_schema.json
scripts/: creation_script.py  custom_mkdocs_serve_watcher.py  hero_to_json.py  image_conversion.py
search/: search_index.js  search_index.json
src/: base_manifest.json  hero_action.ts  hero_shuffle.ts  license_select.ts
stylesheets/: extra.css
templates/: license_template.jinja2
tools/: _debug.txt  package.json
(+290 files in other folders)
