[project]
name = "plainlicense"
version = "0.0.0"
description = "The python component of Plain License provides scripts and utilities for managing and generating plain language licenses and plainlicense.org."
authors = [
    { name = "Adam Poulemanos", email = "07-framer.boons@icloud.com" }
]
dependencies = [
    "mkdocs-material[imaging]>=9.5.28",
    "markdown>=3.6",
    "pymdown-extensions>=10.8.1",
    "mkdocs-static-i18n[material]>=1.2.3",
    "mkdocs-git-revision-date-localized-plugin>=1.2.6",
    "mkdocs-git-authors-plugin>=0.9.0",
    "mkdocs-rss-plugin>=1.15.0",
    "mkdocs[i18n]>=1.6.0",
    "pygments>=2.18.0",
]
readme = "README.md"
requires-python = ">= 3.12"
license = { text = "UNLICENSE" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "tqdm>=4.66.4",
    "glom>=23.5.0",
    "rich>=13.7.1",
    "ipython>=8.26.0",
    "ruff>=0.5.1",
    "uv>=0.2.24",
    "pre-commit>=3.8.0",
    "pre-commit-hooks>=4.6.0",
    "psutil>=6.0.0",
    "jsonschema>=4.23.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/plainlicense"]
