[project]
name = "plainlicense"
version = "0.1.0"
description = "The python component of Plain License provides scripts and utilities for managing and generating plain language licenses and plainlicense.org."
authors = [
    { name = "Adam Poulemanos", email = "adam@plainlicense.org" }
]
dependencies = [
    "PyGithub>=2.4.0",
    "funcy>=2.0",
    "markdown>=3.6",
    "markupsafe>=2.1.5",
    "mkdocs-git-authors-plugin>=0.9.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.6",
    "mkdocs-markdown-filter>=0.1.1",
    "mkdocs-material[imaging]>=9.5.28",
    "mkdocs-rss-plugin>=1.15.0",
    "mkdocs-static-i18n[material]>=1.2.3",
    "mkdocs[i18n]>=1.6.0",
    "pygments>=2.18.0",
    "pymdown-extensions>=10.9",
    "mkdocs-macros-plugin>=1.0.5",
    "mkdocs-minify-plugin>=0.8.0",
    "pyyaml_env_tag>=0.1.0",
    "ez-yaml>=2.2.0",
]
readme = "README.md"
requires-python = ">= 3.12"
license = { text = "UNLICENSE" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "glom>=23.5.0",
    "ipython>=8.26.0",
    "jsonschema>=4.23.0",
    "pillow-avif-plugin>=1.4.6",
    "pillow>=10.4.0",
    "pre-commit-hooks>=4.6.0",
    "pre-commit>=3.8.0",
    "psutil>=6.0.0",
    "pygithub>=2.4.0",
    "pymdown-extensions>=10.9",
    "rich>=13.7.1",
    "ruff>=0.5.1",
    "tqdm>=4.66.4",
    "uv>=0.2.24",
    "textblob>=0.18.0.post0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/plainlicense"]
