[project]
name = "plainlicense"
version = "0.1.0"
description = "The python component of Plain License provides scripts and utilities for managing and generating plain language licenses and plainlicense.org."
authors = [
    { name = "Adam Poulemanos", email = "adam@plainlicense.org" }
]
dependencies = [
    "PyGithub>=2.4.0",
    "funcy>=2.0",
    "markdown>=3.6",
    "markupsafe>=2.1.5",
    "mkdocs-git-authors-plugin>=0.9.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.6",
    "mkdocs-markdown-filter>=0.1.1",
    "mkdocs-material[imaging]>=9.5.28",
    "mkdocs-rss-plugin>=1.15.0",
    "mkdocs-static-i18n[material]>=1.2.3",
    "mkdocs[i18n]>=1.6.0",
    "pygments>=2.18.0",
    "pymdown-extensions>=10.9",
    "mkdocs-macros-plugin>=1.0.5",
    "mkdocs-minify-plugin>=0.8.0",
    "pyyaml_env_tag>=0.1.0",
    "ez-yaml>=2.2.0",
]
readme = "README.md"
requires-python = ">= 3.13"
license = { text = "UNLICENSE" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/plainlicense"]

[tool.uv]
dev-dependencies = [
    "pyperclip>=1.9.0",
    "rich>=13.9.2",
]
